--- a/thZero.NetCore.Library.AutoMapper.csproj
+++ b/thZero.NetCore.Library.AutoMapper.csproj
@@ -4,19 +4,18 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>thZero.NetCore.Library.AutoMapper</AssemblyName>
 		<PackageId>thZero.NetCore.Library.AutoMapper</PackageId>
-		<PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
 		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
 		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
 		<Description />
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.txt</PackageLicenseUrl>
 		<RepositoryUrl>https://github.com/thzero/thZero.NetCore.Library.AutoMapper</RepositoryUrl>
 		<RepositoryType>GitHub</RepositoryType>
-		<Authors>thZero.com</Authors>
-		<PackageProjectUrl>https://github.com/thzero/thZero.NetCore.Library.AutoMapper</PackageProjectUrl>
-		<Copyright></Copyright>
+    <PackageProjectUrl>https://github.com/thzero/thZero.NetCore.Library.AutoMapper</PackageProjectUrl>
+    <Authors>thZero.com</Authors>
 	</PropertyGroup>
 
 	<ItemGroup>
