--- a/thZero.NetCore.Library.AutoMapper.csproj
+++ b/thZero.NetCore.Library.AutoMapper.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
 		<AssemblyName>thZero.NetCore.Library.AutoMapper</AssemblyName>
 		<PackageId>thZero.NetCore.Library.AutoMapper</PackageId>
     <Description></Description>
