--- a/thZero.NetCore.Library.AutoMapper.csproj
+++ b/thZero.NetCore.Library.AutoMapper.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<AssemblyName>thZero.NetCore.Library.AutoMapper</AssemblyName>
 		<PackageId>thZero.NetCore.Library.AutoMapper</PackageId>
     <Description></Description>
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="9.0.0" />
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
